Finish ex03 intro-to-css
Modify style.css to get desired result

--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,14 @@
-/* Add CSS Styling */
+.me,
+.nome {
+    font-size: 30px;
+}
+
+.me {
+    background-color: black;
+    color: white;
+}
+
+.nome {
+    background-color: yellow;
+    color: black;
+}
